--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+h1 {
+  font-family: 'Frank Ruhl Libre', serif;
+  font-weight: bolder;
+  font-size: 2em;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +18,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.date-text {
+  font-style: italic;
+}
+
+
+
+#nav-mobile {
+  display: flex;
+  justify-content: right;
+  padding: 5% 5% 5% 0%;
+}
+
+#hero {
+  position: relative;
+  min-height: 500px;
+  background-color: aquamarine;
+}
+
+#hero-text-container {
+  background-color: beige;
+  position: absolute;
+  min-width: 80%;
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+#hero-text-container p {
+  font-size: 1.125em;
+  margin: 10px;
+}
+
+
